Добавление чекбоксов на окно разблокировки + стилизация

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -3615,12 +3615,16 @@ textarea.form-control-lg {
   padding-left: 1.5em;
   margin-bottom: 0.34375rem;
 }
-.dailyApprove .form-check {
+.dailyApprove .form-check,
+.dailyBlockContainer .form-check,
+.dailyUnBlockContainer .form-check {
   margin-right: 10px;
   margin-left: 5px;
 }
 
-.dailyApprove .form-check-label {
+.dailyApprove .form-check-label,
+.dailyBlockContainer .form-check-label,
+.dailyUnBlockContainer .form-check-label {
   cursor: pointer;
   margin-left: -3px;
 }
